[gd_scene load_steps=30 format=3 uid="uid://be8e4pua1rcs8"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_bdc8l"]
[ext_resource type="Texture2D" uid="uid://bym0qxauvfqo3" path="res://assets/SlimeAssets/Assets/BouncingSpritesheet.png" id="1_jsrc7"]
[ext_resource type="Texture2D" uid="uid://blcmcngt25kqe" path="res://assets/SlimeAssets/Assets/DeathSpritesheet.png" id="2_sap0m"]
[ext_resource type="Texture2D" uid="uid://b4q26rmju4dxb" path="res://assets/SlimeAssets/Assets/IdleSpritesheet.png" id="3_lh3mw"]
[ext_resource type="PackedScene" uid="uid://dlaw0tcxbx6hq" path="res://scenes/damagzone.tscn" id="4_qo4o0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4jut6"]
atlas = ExtResource("1_jsrc7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys8xj"]
atlas = ExtResource("1_jsrc7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx6am"]
atlas = ExtResource("1_jsrc7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bokwr"]
atlas = ExtResource("1_jsrc7")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8arrl"]
atlas = ExtResource("1_jsrc7")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwgys"]
atlas = ExtResource("1_jsrc7")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1onm3"]
atlas = ExtResource("1_jsrc7")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yks1h"]
atlas = ExtResource("2_sap0m")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_psn74"]
atlas = ExtResource("2_sap0m")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_3edss"]
atlas = ExtResource("2_sap0m")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_iolt1"]
atlas = ExtResource("2_sap0m")
region = Rect2(0, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_40v1q"]
atlas = ExtResource("2_sap0m")
region = Rect2(20, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xkxl"]
atlas = ExtResource("2_sap0m")
region = Rect2(40, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk1fp"]
atlas = ExtResource("2_sap0m")
region = Rect2(0, 40, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_th1w0"]
atlas = ExtResource("3_lh3mw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccysv"]
atlas = ExtResource("3_lh3mw")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c14yg"]
atlas = ExtResource("3_lh3mw")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b73cj"]
atlas = ExtResource("3_lh3mw")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll53v"]
atlas = ExtResource("3_lh3mw")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a51aa"]
atlas = ExtResource("3_lh3mw")
region = Rect2(16, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_e0dk8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jut6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys8xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx6am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bokwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8arrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwgys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1onm3")
}],
"loop": true,
"name": &"bounce",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yks1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psn74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3edss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iolt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40v1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xkxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk1fp")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_th1w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccysv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c14yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b73cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll53v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a51aa")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_77paj"]
radius = 5.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eqi6g"]
radius = 3.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_01ti4"]
radius = 74.0

[node name="Slime" type="CharacterBody2D"]
z_index = 3
position = Vector2(1, 0)
script = ExtResource("1_bdc8l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e0dk8")
animation = &"idle"
autoplay = "idle"

[node name="damagezone" parent="." instance=ExtResource("4_qo4o0")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damagezone"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_77paj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_eqi6g")

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_01ti4")

[node name="Timer" type="Timer" parent="VisionArea"]
wait_time = 2.5
one_shot = true

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
[connection signal="timeout" from="VisionArea/Timer" to="." method="_on_timer_timeout"]
